# Eureka

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json  README.md  clean.ps1  configure.ps1  eureka_default.cpp  targets_utils.cmake  text_bad.csv  text_ok.csv  utility.cmake  vcpkg.json
Eureka.App/: App.cpp  App.hpp  CMakeLists.txt  EurekaMain.cpp  IOCContainer.cpp  IOCContainer.hpp
Eureka.AssetLoading/: AssetLoading.cpp  AssetLoading.hpp  CMakeLists.txt  tingltf.cpp
Eureka.Core/: CMakeLists.txt  assert.hpp  basic_concepts.hpp  basic_errors.hpp  basic_utils.hpp  compiler.hpp  cpp17_cpp20.hpp  debugger_trace.hpp  debugger_trace_impl.cpp  debugger_trace_impl.hpp  eigen_graphics.hpp  fixed_capacity_vector.hpp  format_cpp17.hpp  format_cpp20.hpp  formatter_specializations.hpp  future.hpp  logging.hpp  macros.hpp  move.hpp  perfetto_tracing_session.cpp  profiling.cpp  profiling.hpp  profiling_categories.hpp  profiling_macros.hpp  system.hpp  thread_name.cpp  thread_name.hpp  trigger_debugger_breakpoint.hpp  windows.hpp
Eureka.Core/perfetto/: perfetto.cc
Eureka.Graphics/: AssetLoading.cpp  AssetLoading.hpp  AsyncDataLoader.cpp  AsyncDataLoader.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraPass.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Commands.cpp  Commands.hpp  CommandsUtils.cpp  CommandsUtils.hpp  DescriptorSetsLayout.cpp  DescriptorSetsLayout.hpp  Descriptors.cpp  Descriptors.hpp  DeviceContext.cpp  DeviceContext.hpp  FrameContext.cpp  FrameContext.hpp  GLFWRuntime.cpp  GLFWRuntime.hpp  GraphicsDefaults.hpp  IPass.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  ImGuiViewPass.cpp  ImGuiViewPass.hpp  Image.cpp  Image.hpp  Images.cpp  Images.hpp  ImguiIntegration.cpp  ImguiIntegration.hpp  Instance.cpp  Instance.hpp  (+57 more)
Eureka.Graphics/stale/: RenderTarget.cpp
Eureka.Graphics/todo/: AssetLoading.hpp  Model.hpp
Eureka.Playground/: CMakeLists.txt  flutter_embedding_google_sample.cpp  flutter_embedding_tests.cpp  main.cpp
Eureka.Precompiled/: CMakeLists.txt  global_definitions.hpp  precompiled.cpp
Eureka.RemoteClient/: CMakeLists.txt  PoseGraphStreamer.hpp  RemoteLiveSlamClient.cpp  RemoteLiveSlamClient.hpp  RemoteLiveSlamControlCenterHandler.hpp  RemoteLiveSlamUI.cpp  RemoteLiveSlamUI.hpp  RemoteUIClient.cpp  RemoteUIClient.hpp  client_main.cpp
Eureka.RemoteServer/: CMakeLists.txt  RemoteUIServer.cpp  RemoteUIServer.hpp  VisualizationService.hpp  server_main.cpp
Eureka.Shaders/: CMakeLists.txt  ColoredVertexFS.hlsl  ColoredVertexVS.hlsl  ImGuiGLSLFS.frag  ImGuiVS.hlsl  PhongShadedMeshWithNormalMapFS.hlsl  ShadedMeshVS.hlsl  ShadedMeshWithNormalMapVS.hlsl  Shader1.hlsl  ShadersCache.cpp  ShadersCache.hpp  ShadersDeclare.hpp  ShadersImpl.cpp  Textured2DRegionFS.hlsl  Textured2DRegionVS.hlsl  common_sets.hlsli  compile_shaders.ps1
Eureka.UnitTests/: CMakeLists.txt  fixed_capacity_vector.tests.cpp  flutter_embedding_tests.cpp  formatting.tests.cpp  main.cpp  tests.cpp  transform.tests.cpp  vulkan_memory.tests.cpp  vulkan_objects.tests.cpp
Eureka.Vulkan/: Buffer.hpp  BufferMemoryPool.cpp  BufferMemoryPool.hpp  CMakeLists.txt  Commands.cpp  Commands.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorAllocators.cpp  DescriptorLayoutCache.cpp  DescriptorLayoutCache.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetsLayout.cpp  DescriptorSetsLayout.hpp  Device.cpp  Device.hpp  FrameContext.cpp  FrameContext.hpp  Image.cpp  Image.hpp  ImageMemoryPool.cpp  ImageMemoryPool.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  PipelineCache.cpp  PipelineCache.hpp  PipelineHelpers.hpp  PipelinePresets.cpp  PipelinePresets.hpp  PipelineTypes.hpp  RenderPass.cpp  RenderPass.hpp  RenderTarget.cpp  RenderTarget.hpp  ResourceAllocator.cpp  ResourceAllocator.hpp  ResourceUpload.cpp  (+9 more)
Eureka.Windowing/: CMakeLists.txt  GLFWRuntime.cpp  GLFWRuntime.hpp  Window.cpp  Window.hpp
Examples/FlutterAppAOT/: CMakeLists.txt  main.cpp
Examples/FlutterAppJIT/: CMakeLists.txt  flutter_embedding_google_sample.cpp  main.cpp
Examples/ImGuiApp/: App.hpp  CMakeLists.txt  IOCContainer.cpp  IOCContainer.hpp
Libs/: CMakeLists.txt
Libs/Eureka.Core/: CMakeLists.txt  basic_concepts.hpp  basic_errors.hpp  basic_utils.hpp  compiler.hpp  containers_aliases.hpp  debugger_trace_impl.cpp  debugger_trace_impl.hpp  fixed_capacity_vector.hpp  logging.hpp  perfetto_tracing_session.cpp  profiling.hpp  profiling_categories.cpp  profiling_macros.hpp  system.cpp
Libs/Eureka.Flutter/: CMakeLists.txt  FlutterProjectEmbedder.cpp  FlutterTaskRunners.hpp  FlutterUtils.cpp  FlutterUtils.hpp  FlutterVulkanCompositor.cpp  FlutterVulkanCompositor.hpp  TaskRunners.cpp  VulkanCompositor.cpp  VulkanDesktopEmbedder.cpp  VulkanDesktopEmbedder.hpp
Libs/Eureka.FlutterEmbedderAPI/: CMakeLists.txt  FlutterEmbedderAPI.cpp  FlutterEmbedderAPI.h
Libs/Eureka.Graphics/: AsyncDataLoader.cpp  CMakeLists.txt  IPass.hpp  ImGuiViewPass.hpp  RenderDocIntegration.hpp  RenderingSystem.cpp  Scene.cpp  SubmissionThreadExecutor.cpp  TargetPass.cpp
Libs/Eureka.Interfaces/: CMakeLists.txt
Libs/Eureka.Precompiled/: CMakeLists.txt
Libs/Eureka.RPC/: CMakeLists.txt  ServerCompletionQueue.cpp  ServerCompletionQueue.hpp  UnifiedCompletionQueue.cpp
Libs/Eureka.RemoteClient/: CMakeLists.txt  RemoteLiveSlamUI.cpp
Libs/Eureka.RemoteProto/: CMakeLists.txt
Libs/Eureka.RemoteServer/: RemoteUIServer.hpp  VisualizationService.cpp  server_main.cpp
Libs/Eureka.Serialization/: CMakeLists.txt  json_io.hpp  json_nlohmann_specializations.hpp  json_serialization_impl.cpp
Libs/Eureka.Shaders/: CMakeLists.txt  ColoredVertexFS.hlsl  ImGuiFS.hlsl  ImGuiGLSLVS.vert  ShadersImpl.cpp  set0_id_000 - Copy.hlsli
Libs/Eureka.Vulkan/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Commands.cpp  Commands.hpp  Descriptor.cpp  DescriptorAllocators.cpp  DescriptorLayoutCache.cpp  DescriptorPool.hpp  DescriptorSetsLayout.cpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Pipeline.hpp  PipelineCache.cpp  (+16 more)
ZZZ_SAMPLE/: CMakeLists.txt  zzz_sample.cpp
(+209 files in other folders)
